exports[`RadioContainer should listen to the onChange event and return the checked value 1`] = `
<RadioContainer
  items={
    Array [
      Object {
        "label": "test 1",
        "value": "1",
      },
      Object {
        "label": "test 2",
        "value": "2",
      },
    ]
  }
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onKeyUp={[Function]}
  type="radio"
  value="2">
  <GroupComponent
    isChecked={[Function]}
    items={
      Array [
        Object {
          "label": "test 1",
          "value": "1",
        },
        Object {
          "label": "test 2",
          "value": "2",
        },
      ]
    }
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    type="radio">
    <div>
      <input
        checked={true}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        type="radio"
        value="1" />
      <input
        checked={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        type="radio"
        value="2" />
    </div>
  </GroupComponent>
</RadioContainer>
`;

exports[`RadioContainer should listen to the onChange event and return the checked value 2`] = `
<RadioContainer
  items={
    Array [
      Object {
        "label": "test 1",
        "value": "1",
      },
      Object {
        "label": "test 2",
        "value": "2",
      },
    ]
  }
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onKeyUp={[Function]}
  type="radio"
  value="2">
  <GroupComponent
    isChecked={[Function]}
    items={
      Array [
        Object {
          "label": "test 1",
          "value": "1",
        },
        Object {
          "label": "test 2",
          "value": "2",
        },
      ]
    }
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    type="radio">
    <div>
      <input
        checked={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        type="radio"
        value="1" />
      <input
        checked={true}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        type="radio"
        value="2" />
    </div>
  </GroupComponent>
</RadioContainer>
`;

exports[`RadioContainer should render correctly 1`] = `
"Expected \"WrappedComponent\" provided as the first argument to
        RadioContainerHOC to be a function. Instead, received
        object."
`;

exports[`RadioContainer should render correctly 2`] = `
<GroupComponent
  isChecked={[Function]}
  items={
    Array [
      Object {
        "label": "test 1",
        "value": "1",
      },
      Object {
        "label": "test 2",
        "value": "2",
      },
    ]
  }
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onKeyUp={[Function]}
  type="radio" />
`;

exports[`RadioContainer should validate prop types 1`] = `
"Warning: Failed prop type: Invalid prop \`items\` of type \`number\` supplied to \`RadioContainer\`, expected an array.
    in RadioContainer"
`;

exports[`RadioContainer should validate prop types 2`] = `
"Warning: Failed prop type: Invalid prop \`type\` of value \`checkbox\` supplied to \`RadioContainer\`, expected one of [\"radio\"].
    in RadioContainer"
`;

exports[`RadioContainer should validate prop types 3`] = `
"Warning: Failed prop type: Invalid prop \`value\` of type \`number\` supplied to \`RadioContainer\`, expected \`string\`.
    in RadioContainer"
`;
